[package]
name = "qbot"
version = "0.1.0"
authors = ["qb <grant9390@naver.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = { version = "0.15.0" }
serenity = { version = "0.11.5", features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
