[package]
name = "qbot"
version = "0.1.0"
authors = ["qb <grant9390@naver.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = { version = "0.15.0" }
rand = "0.8.5"
serenity = { version = "0.11.5", features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
